# py_nfse

./: .env  .env.example  .gitignore  README.md  README_COMPARACAO.md  README_EMAIL.md  importar_arquivos_oracle.py  importar_certificados_oracle.py  importar_lojas_oracle.py  lojas.xlsx  main.py  nfse_playwright_agent.py  pyproject.toml  requirements.txt
